Added resource for getting all users activity
